# ceo

./: .gitignore  CHANGELOG.md  Cargo.toml  Ion.toml  README.md
.github/workflows/: release-plz.yml  release.yml
crates/ceo-schema/: CHANGELOG.md  Cargo.toml
docs/plans/: 2026-03-06-ceo-cli-design.md  2026-03-06-ceo-cli-implementation.md  2026-03-07-agent-abstraction-design.md  2026-03-07-agent-abstraction-implementation.md  2026-03-07-config-command-design.md  2026-03-07-config-command-implementation.md  2026-03-08-sync-sqlite-design.md  2026-03-08-sync-sqlite-implementation.md  2026-03-09-roadmap-initiatives-design.md  2026-03-10-batch-parallel-summarization-design.md  2026-03-10-batch-parallel-summarization-implementation.md  2026-03-10-task-pipeline-design.md  2026-03-10-task-pipeline-implementation.md  2026-03-19-interactive-tui-refactor.md
src/: agent.rs  config.rs  db.rs  error.rs  filter.rs  gh.rs  github.rs  lib.rs  main.rs  pipeline.rs  prompt.rs  report.rs  roadmap.rs  self_update.rs  slack.rs  sync.rs  tui.rs  tui_app.rs
src/tasks/: commit_log.rs  executive.rs  fetch_data.rs  mod.rs  repo_summary.rs  summarize.rs  team_stats.rs  triage.rs
src/templates/: executive.md  standup.md  technical.md
tests/: agent_test.rs  config_test.rs  db_test.rs  error_test.rs  filter_test.rs  gh_test.rs  github_test.rs  integration_test.rs  pipeline_test.rs  prompt_test.rs  report_test.rs  roadmap_test.rs  slack_test.rs  sync_test.rs  tui_test.rs
tests/snapshots/: slack_test__slack_webhook_blocks.snap  tui_test__tui_completions.snap  tui_test__tui_initial.snap  (+2 more)
(+1 files in other folders)
