[package]
name = "ceo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.28"
dirs = "6"
anyhow = "1"
rustyline = "15"
log = "0.4.29"
env_logger = "0.11.9"
thiserror = "2.0.18"
rusqlite = { version = "0.33", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
