[package]
name = "ceo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.30"
crossterm = "0.29"
dirs = "6"
anyhow = "1"
rustyline = "17"
log = "0.4.29"
env_logger = "0.11.9"
thiserror = "2.0.18"
rusqlite = { version = "0.38", features = ["bundled"] }
indicatif = "0.18"

[dev-dependencies]
tempfile = "3"
